Grade levels api

--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -195,7 +195,7 @@ Example:
           <sps-page-dates data-page="dates" dates="[[dates]]"></sps-page-dates>
           <sps-page-blocks data-page="blocks" blocks="[[blocks]]"></sps-page-blocks>
           <sps-page-locations data-page="locations" locations="[[locations]]"></sps-page-locations>
-          <sps-page-grades data-page="grades" grades="[[grades]]"></sps-page-grades>
+          <sps-page-grades data-page="grades" grades="[[grade_levels]]"></sps-page-grades>
           <sps-page-houses data-page="houses" houses="[[houses]]"></sps-page-houses>
         </neon-animated-pages>
 
