--- a/public/elements/sps-page-dates.html
+++ b/public/elements/sps-page-dates.html
@@ -161,7 +161,7 @@ Example:
         if(e.detail.response.status === true){
           this.$.editDialog.resetForm();
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "deleted";
               break;
@@ -186,7 +186,7 @@ Example:
             }
           }
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "delete";
               break;
