--- a/public/elements/sps-page-grades.html
+++ b/public/elements/sps-page-grades.html
@@ -135,7 +135,7 @@ Example:
           this.$.addDialog.resetForm();
           this.$.editDialog.resetForm();
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "deleted";
               break;
@@ -160,7 +160,7 @@ Example:
             }
           }
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "delete";
               break;
