--- a/public/elements/sps-page-houses.html
+++ b/public/elements/sps-page-houses.html
@@ -127,7 +127,7 @@ Example:
           this.$.addDialog.resetForm();
           this.$.editDialog.resetForm();
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "deleted";
               break;
@@ -152,7 +152,7 @@ Example:
             }
           }
           var action_word = "";
-          switch(e.srcElement.method) {
+          switch(e.target.method) {
             case "DELETE":
               action_word = "delete";
               break;
