CAtch iron select event

--- a/public/elements/sps-page-dates.html
+++ b/public/elements/sps-page-dates.html
@@ -47,7 +47,7 @@ Example:
         <div class="flex"></div>
       </div>
       <div class="layout vertical">
-        <paper-date-picker id="editD" date="{{editDate}}" class="ctech-input-date"></paper-date-picker>
+        <paper-date-picker id="editD" on-iron-select="_catchSelect" date="{{editDate}}" class="ctech-input-date"></paper-date-picker>
       </div>
     </ctech-confirm-dialog>
 
